--- a/package.json
+++ b/package.json
@@ -136,5 +136,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "less": "^3.11.2",
+    "less-loader": "^6.1.0"
   }
 }
