--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
@@ -135,9 +136,13 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      ["import", { "libraryName": "antd", "style": "css" }]
     ]
   },
   "devDependencies": {
+    "antd": "^4.3.0",
     "less": "^3.11.2",
     "less-loader": "^6.1.0"
   }
